fix: Fix issue with autofill modal being wider than screen on mobile
Jira Issue DD-2172

--- a/css/autoFill.dataTables.scss
+++ b/css/autoFill.dataTables.scss
@@ -135,4 +135,9 @@ div.dt-autofill-background {
 		height: 16px;
 		width: 16px;
 	}
+
+	div.dt-autofill-list {
+		width: 90%;
+		left: 74.5%;
+	}
 }
